login and registration page edited

--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -38,7 +38,9 @@
         >
           Add Product
         </button>
-        <a class="list-group-item text-center" href="/products">Back to Site</a>
+        <a class="list-group-item text-center bg-danger" href="/products"
+          >Back to Site</a
+        >
       </div>
     </mat-nav-list>
   </mat-sidenav>
