--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -54,7 +54,7 @@
             </li>
             <div class="dropdown-divider"></div>
             <li>
-              <a class="dropdown-item" routerLink="/admindashboard"
+              <a class="dropdown-item" routerLink="/admindashboard/productlist"
                 >Go to Dashboard</a
               >
             </li>
