--- a/src/app/admindashboard/categorylist/categorylist.component.html
+++ b/src/app/admindashboard/categorylist/categorylist.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <h2>Category List</h2>
+  <h2 class="text-center">{{ "body.catlist" | transloco }}</h2>
   <div class="container">
     <div class="card-table">
       <div class="cart-product">
@@ -7,7 +7,7 @@
           <thead>
             <tr>
               <th>Id</th>
-              <th>Category Name</th>
+              <th>{{ "body.categoryname" | transloco }}</th>
             </tr>
           </thead>
           <tbody>
