--- a/src/app/admindashboard/productlist/productlist.component.html
+++ b/src/app/admindashboard/productlist/productlist.component.html
@@ -1,17 +1,17 @@
 <ng-container>
-  <h2>Product List</h2>
+  <h2 class="text-center">{{ "body.productlist" | transloco }}</h2>
   <div class="container">
     <div class="card-table">
       <div class="cart-product">
         <table class="table table-responsive">
           <thead>
             <tr>
-              <th>Product Name</th>
-              <th>Product Image</th>
-              <th>Description</th>
-              <th>Price</th>
-              <th>Update</th>
-              <th>Delete</th>
+              <th>{{ "body.productname" | transloco }}</th>
+              <th>{{ "body.img" | transloco }}</th>
+              <th>{{ "body.description" | transloco }}</th>
+              <th>{{ "body.price" | transloco }}</th>
+              <th>{{ "body.update" | transloco }}</th>
+              <th>{{ "body.delete" | transloco }}</th>
             </tr>
           </thead>
           <tbody>
