--- a/src/app/admindashboard/updateproduct/updateproduct.component.html
+++ b/src/app/admindashboard/updateproduct/updateproduct.component.html
@@ -1,8 +1,10 @@
-<h2 class="bg-light mb-2 text-center">Update Product</h2>
+<h2 class="bg-light mb-2 text-center">{{ "body.update" | transloco }}</h2>
 <form class="login-form" [formGroup]="updateProductForm" (submit)="onSubmit()">
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer01">Product Name</label>
+      <label for="validationServer01">{{
+        "crud.productname" | transloco
+      }}</label>
       <input type="text" class="form-control" [formControlName]="'name'" />
     </div>
     <span
@@ -11,7 +13,7 @@
         updateProductForm.get('name')!.hasError('required') &&
         updateProductForm.get('name').touched
       "
-      >name is required
+      >{{ "crud.namereq" | transloco }}
     </span>
     <span
       class="text-danger"
@@ -19,10 +21,10 @@
         updateProductForm.get('name')!.hasError('minlength') &&
         updateProductForm.get('name').touched
       "
-      >minimum 5 characters
+      >{{ "crud.min5" | transloco }}
     </span>
     <div class="col-md-6 mb-3">
-      <label for="validationServer02">Category Id</label>
+      <label for="validationServer02">{{ "crud.catid" | transloco }}</label>
       <input
         type="text"
         class="form-control"
@@ -35,10 +37,10 @@
         updateProductForm.get('categoryId')!.hasError('required') &&
         updateProductForm.get('categoryId').touched
       "
-      >category ID is required
+      >{{ "crud.catidreq" | transloco }}
     </span>
     <div class="col-md-6 mb-3">
-      <label for="validationServer02">Product Image</label>
+      <label for="validationServer02">{{ "crud.img" | transloco }}</label>
       <input
         type="text"
         class="form-control"
@@ -49,7 +51,9 @@
 
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer03">Description</label>
+      <label for="validationServer03">{{
+        "crud.description" | transloco
+      }}</label>
       <textarea
         type="text"
         class="form-control"
@@ -63,7 +67,7 @@
         updateProductForm.get('description')!.hasError('required') &&
         updateProductForm.get('description').touched
       "
-      >description is required
+      >{{ "crud.descriptionreq" | transloco }}
     </span>
     <span
       class="text-danger"
@@ -71,12 +75,12 @@
         updateProductForm.get('description')!.hasError('minlength') &&
         updateProductForm.get('name').touched
       "
-      >minimum 15 characters
+      >{{ "crud.min15" | transloco }}
     </span>
   </div>
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer01">Product Price</label>
+      <label for="validationServer01">{{ "crud.price" | transloco }}</label>
       <input type="text" class="form-control" [formControlName]="'price'" />
     </div>
     <span
@@ -85,8 +89,10 @@
         updateProductForm.get('price')!.hasError('required') &&
         updateProductForm.get('price').touched
       "
-      >price is required
+      >{{ "crud.pricereq" | transloco }}
     </span>
   </div>
-  <button class="btn btn-primary" type="submit">Submit form</button>
+  <button class="btn btn-primary" type="submit">
+    {{ "crud.save" | transloco }}
+  </button>
 </form>
