--- a/src/app/admindashboard/addproduct/addproduct.component.html
+++ b/src/app/admindashboard/addproduct/addproduct.component.html
@@ -1,8 +1,10 @@
-<h2 class="bg-light mb-2 text-center">Add New Product</h2>
+<h2 class="bg-light mb-2 text-center">{{ "crud.addnew" | transloco }}</h2>
 <form class="login-form" [formGroup]="addProductForm" (submit)="onSubmit()">
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer01">Product Name</label>
+      <label for="validationServer01">{{
+        "crud.productname" | transloco
+      }}</label>
       <input
         type="text"
         class="form-control"
@@ -16,7 +18,7 @@
         addProductForm.get('name')!.hasError('required') &&
         addProductForm.get('name').touched
       "
-      >name is required
+      >{{ "crud.namereq" | transloco }}
     </span>
     <span
       class="text-danger"
@@ -24,10 +26,10 @@
         addProductForm.get('name')!.hasError('minlength') &&
         addProductForm.get('name').touched
       "
-      >minimum 5 characters
+      >{{ "crud.min5" | transloco }}
     </span>
     <div class="col-md-6 mb-3">
-      <label for="validationServer02">Category Id</label>
+      <label for="validationServer02">{{ "crud.catid" | transloco }}</label>
       <input
         type="text"
         class="form-control"
@@ -41,13 +43,15 @@
         addProductForm.get('categoryId')!.hasError('required') &&
         addProductForm.get('categoryId').touched
       "
-      >category ID is required
+      >{{ "crud.catidreq" | transloco }}
     </span>
   </div>
 
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer03">Description</label>
+      <label for="validationServer03">{{
+        "crud.description" | transloco
+      }}</label>
       <textarea
         type="text"
         class="form-control"
@@ -61,7 +65,7 @@
         addProductForm.get('description')!.hasError('required') &&
         addProductForm.get('description').touched
       "
-      >description is required
+      >{{ "crud.descriptionreq" | transloco }}
     </span>
     <span
       class="text-danger"
@@ -69,12 +73,12 @@
         addProductForm.get('description')!.hasError('minlength') &&
         addProductForm.get('name').touched
       "
-      >minimum 15 characters
+      >{{ "crud.min15" | transloco }}
     </span>
   </div>
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer01">Product Price</label>
+      <label for="validationServer01">{{ "crud.price" | transloco }}</label>
       <input
         type="text"
         class="form-control"
@@ -88,8 +92,10 @@
         addProductForm.get('price')!.hasError('required') &&
         addProductForm.get('price').touched
       "
-      >price is required
+      >{{ "crud.pricereq" | transloco }}
     </span>
   </div>
-  <button class="btn btn-primary" type="submit">Submit form</button>
+  <button class="btn btn-primary" type="submit">
+    {{ "crud.save" | transloco }}
+  </button>
 </form>
