--- a/src/app/products/view-product-by-category/view-product-by-category.component.html
+++ b/src/app/products/view-product-by-category/view-product-by-category.component.html
@@ -40,11 +40,11 @@
         <table class="table table-responsive">
           <thead>
             <tr>
-              <th>Product Name</th>
-              <th>Product Image</th>
-              <th>Description</th>
-              <th>Price</th>
-              <th>Add to Cart</th>
+              <th>{{ "body.productname" | transloco }}</th>
+              <th>{{ "body.img" | transloco }}</th>
+              <th>{{ "body.description" | transloco }}</th>
+              <th>{{ "body.price" | transloco }}</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
